# MedSeal

./: .gitignore  Cargo.toml  README.md  canister_ids.json  deploy.sh  dfx.json  dfxbcp.json  doctor-madam-talking.mp4:Zone.Identifier  package-lock.json  package.json  tailwind.config.js
docs/: NGO_SYSTEM.md
src/MedSeal_backend/: Cargo.toml  MedSeal_backend.did
src/MedSeal_backend/src/: lib.rs
src/MedSeal_backend/src/admin/: mod.rs  users.rs  verification.rs
src/MedSeal_backend/src/ai/: chat.rs
src/MedSeal_backend/src/doctor/: medicines.rs  mod.rs  prescriptions.rs  verification.rs
src/MedSeal_backend/src/ngo/: cases.rs  mod.rs  verification.rs
src/MedSeal_backend/src/patient/: mod.rs  prescriptions.rs
src/MedSeal_backend/src/shared/: auth.rs  mod.rs  storage.rs  types.rs  utils.rs
src/MedSeal_frontend/: index.html  package.json  tailwind.config.js  vite.config.js
src/MedSeal_frontend/public/: .ic-assets.json5  index.html  manifest.json  sw.js
src/MedSeal_frontend/src/: App.css  App.jsx  index.css  index.scss  main.jsx  theme.js
src/MedSeal_frontend/src/components/: AIChat.jsx  Alert.jsx  DoctorDashboard.jsx  FAIcon.jsx  LandingPage.jsx  Login.jsx  NGODashboard.jsx  Navbar.jsx  PatientDashboard.jsx  Register.jsx  TalkingAvatar.jsx  WidgetChat.jsx  useFavicon.js
src/MedSeal_frontend/src/hooks/: useAuth.jsx
src/MedSeal_frontend/src/layouts/: DashboardLayout.jsx  PublicLayout.jsx
src/MedSeal_frontend/src/pages/: AdminDashboardPage.jsx  DoctorDashboardPage.jsx  LandingPage.jsx  LoginPage.jsx  NGODashboardPage.jsx  PatientDashboardPage.jsx  (+1 more)
(+43 files in other folders)
